# masked_face_emotion_detection

./: .gitignore  README.md  main.py  mask_data_script.sh  scratch_NN.py  test.py  test_NN.py  transfer_NN.py
RetrainiBUG300-W/: cnn_face_detector.py  face_detection_stats.xlsx  find_un_masked.sh  labels_ibug_300W_masked_test.xml  parse_xml.py  predict_masked_portion.py  requirements.txt  train_mask_face_predictor.py  train_mask_face_predictor_modified.py
maskedFaceEmotionDetection/: pyproject.toml
maskedFaceEmotionDetection/maskedfaceemotiondetection/: classifiers.py  common.py  decisionTreeClassification.py  kmeans.py  kmeansWithClassifier.py  kmeansWithClassifierOnNMF.py  kmeansWithNMF.py  kmeansWithNMFandClassifier.py  scratch_NN.py  test_NN.py  transfer_NN.py
maskedFaceEmotionDetection/tests/: test_maskedfaceemotiondetection.py
